bugs and features
1) Better handling of missing columns in map_checker.py
2) Extra tests for nan
3) New drift_prefix to strip out recent deposits from maps
4) Notebooks updated accordingly

--- a/notebooks/2. QLD map processing.ipynb
+++ b/notebooks/2. QLD map processing.ipynb
@@ -1076,6 +1076,7 @@
     "    structure_clip['azimuth2'] = structure_clip.apply(lambda row: row[c_l['dd']]+90.0, axis = 1)\n",
     "    c_l['dd']='azimuth2'\n",
     "    \n",
+    "structure_clip=structure_clip[~structure_clip[c_l['o']].isnull()]\n",
     "\n",
     "structure_clip.to_file(tmp_path+'structure_clip.shp')\n"
    ]
