--- a/notebooks/4. NT leaflet example.ipynb
+++ b/notebooks/4. NT leaflet example.ipynb
@@ -462,6 +462,8 @@
     "\n",
     "Australia=True\n",
     "\n",
+    "drift_prefix=['None']\n",
+    "\n",
     "#################################\n",
     "# There are many alternative datasets that \n",
     "# can be extracted from the input data, \n",
@@ -604,7 +606,7 @@
    },
    "outputs": [],
    "source": [
-    "structure_file,geology_file,fault_file,mindep_file,fold_file=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths)"
+    "structure_file,geology_file,fault_file,mindep_file,fold_file,c_l=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths,drift_prefix)"
    ]
   },
   {
@@ -1300,6 +1302,7 @@
     "    structure_clip['azimuth2'] = structure_clip.apply(lambda row: row[c_l['dd']]+90.0, axis = 1)\n",
     "    c_l['dd']='azimuth2'\n",
     "    \n",
+    "structure_clip=structure_clip[~structure_clip[c_l['o']].isnull()]\n",
     "\n",
     "structure_clip.to_file(tmp_path+'structure_clip.shp')\n"
    ]
