--- a/notebooks/6. SA leaflet example.ipynb
+++ b/notebooks/6. SA leaflet example.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,24 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb13630ce324408a9ad0684beb141e8c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Map area:', options=('Draw Your Own', 'Last Area Drawn'), value='Draw Your Own')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
     "import os\n",
@@ -112,17 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Draw Your Own\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_data_name=map_choice.value\n",
     "print(test_data_name)\n",
@@ -136,40 +113,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1d0be750f374b499c0490f3d2e4734a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Label(value='')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0dcba011a80e4ca7a0086263945d10fe",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[-32.8, 138.9], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_o…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import folium\n",
     "import pandas as pd\n",
@@ -192,7 +140,7 @@
     "        maxx=last_coords.iloc[0]['maxx']\n",
     "        maxy=last_coords.iloc[0]['maxy']\n",
     "    src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
-    "    dst_crs = \"epsg:28352\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
+    "    dst_crs = \"epsg:28354\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
     "\n",
     "    bbox2=str(minx)+\",\"+str(miny)+\",\"+str(maxx)+\",\"+str(maxy)\n",
     "    y_point_list = [miny, miny, maxy, maxy, maxy]\n",
@@ -221,15 +169,15 @@
     "                   name = 'Example')\n",
     "    center=(minlat+((maxlat-minlat)/2),minlong+((maxlong-minlong)/2))\n",
     "else:\n",
-    "    center=(-32.8,138.9)\n",
+    "    center=(-33.5,138.7)\n",
     "    \n",
     "wms_warox = WMSLayer(\n",
     "    url='http://geo.loop-gis.org/geoserver/GSSA/wms?',\n",
-    "    layers='GSSA:2m linear structures',\n",
+    "    layers='GSSA:sth_flinders',\n",
     "    format='image/png',\n",
     "    transparent=True,\n",
-    "    attribution='Fault data from GSSA',\n",
-    "    name='faults'\n",
+    "    attribution='Outcrop data from GSSA',\n",
+    "    name='outcrops'\n",
     "\n",
     ")\n",
     "wms_geol = WMSLayer(\n",
@@ -314,7 +262,7 @@
     "        \n",
     "    bounds=(minlong,maxlong,minlat,maxlat)\n",
     "    src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
-    "    dst_crs = \"epsg:28352\" # coordinate system for example data\n",
+    "    dst_crs = \"epsg:28354\" # coordinate system for example data\n",
     "\n",
     "\n",
     "    lat_point_list = [minlat, minlat, maxlat, maxlat,maxlat]\n",
@@ -439,7 +387,7 @@
     "pycharm": {
      "is_executing": false
     },
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -453,8 +401,8 @@
     "    bbox2=str(minx)+\",\"+str(miny)+\",\"+str(maxx)+\",\"+str(maxy)\n",
     "\n",
     "    os.chdir('../SA/')\n",
-    "    #%run -i \"m2l_config.py\"\n",
-    "    %run -i \"m2l_config_remote.py\"\n",
+    "    %run -i \"m2l_config.py\"\n",
+    "    #%run -i \"m2l_config_remote.py\"\n",
     "    print(os.getcwd())\n",
     "    \n",
     "else:\n",
@@ -514,6 +462,8 @@
     "#spacing=500   #grid spacing in metres of interpolation points\n",
     "\n",
     "Australia=True\n",
+    "\n",
+    "drift_prefix=['T','Q']\n",
     "\n",
     "#################################\n",
     "# There are many alternative datasets that \n",
@@ -657,7 +607,8 @@
    },
    "outputs": [],
    "source": [
-    "structure_file,geology_file,fault_file,mindep_file,fold_file=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths)"
+    "\n",
+    "structure_file,geology_file,fault_file,mindep_file,fold_file,c_l=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths,drift_prefix)\n"
    ]
   },
   {
@@ -698,7 +649,7 @@
      "end_time": "2020-06-02T06:36:23.738017Z",
      "start_time": "2020-06-02T06:36:11.334988Z"
     },
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -1353,6 +1304,7 @@
     "    structure_clip['azimuth2'] = structure_clip.apply(lambda row: row[c_l['dd']]+90.0, axis = 1)\n",
     "    c_l['dd']='azimuth2'\n",
     "    \n",
+    "structure_clip=structure_clip[~structure_clip[c_l['o']].isnull()]\n",
     "\n",
     "structure_clip.to_file(tmp_path+'structure_clip.shp')\n"
    ]
