--- a/notebooks/5. VIC leaflet example.ipynb
+++ b/notebooks/5. VIC leaflet example.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "if(not os.path.isdir('../VIC/data') and False):\n",
     "\n",
-    "    with urlopen('http://geo.loop-gis.org/files/NTdata.zip') as zipresp:\n",
+    "    with urlopen('http://geo.loop-gis.org/files/VICdata.zip') as zipresp:\n",
     "        with ZipFile(BytesIO(zipresp.read())) as zfile:\n",
     "            zfile.extractall('../VIC/')"
    ]
@@ -403,7 +403,7 @@
     "\n",
     "    os.chdir('../VIC/')\n",
     "    #%run -i \"m2l_config.py\"\n",
-    "    %run -i \"m2l_config_remote.py\"\n",
+    "    %run -i \"m2l_config.py\"\n",
     "    print(os.getcwd())\n",
     "    \n",
     "else:\n",
@@ -463,6 +463,8 @@
     "#spacing=500   #grid spacing in metres of interpolation points\n",
     "\n",
     "Australia=True\n",
+    "\n",
+    "drift_prefix=['Q','N','C']\n",
     "\n",
     "#################################\n",
     "# There are many alternative datasets that \n",
@@ -601,12 +603,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For VIC data, strip off trailing info from formation name ('ABBREVIATE' field)\n",
+    "geology = gpd.read_file(geology_file,bbox=bbox)\n",
+    "#display(geology.head())\n",
+    "c_root=geology[c_l['c']].str.split(pat=\"(\",expand=True)\n",
+    "c_root=c_root[0].str.split(pat=\"-\",expand=True)\n",
+    "c_root[0]=c_root[0].str.rstrip()\n",
+    "\n",
+    "geology[c_l['c']]=c_root[0]\n",
+    "#display(geology.head())\n",
+    "\n",
+    "geology.crs=dst_crs\n",
+    "geology_file=tmp_path+'geol_clip.shp'\n",
+    "geology.to_file(geology_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "structure_file,geology_file,fault_file,mindep_file,fold_file=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths)"
+    "structure_file,geology_file,fault_file,mindep_file,fold_file,c_l=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths,drift_prefix)"
    ]
   },
   {
@@ -1253,7 +1276,8 @@
     "\n",
     "base=geology.plot(column=c_l['c'],figsize=(10,10),edgecolor='#000000',linewidth=0.2)\n",
     "sub_pts.plot(ax=base,edgecolor='black')\n",
-    "faults_clip.plot(ax=base, column=c_l['f'],edgecolor='black')"
+    "if(os.path.exists(fault_file)):\n",
+    "    faults_clip.plot(ax=base, column=c_l['f'],edgecolor='black')"
    ]
   },
   {
@@ -1302,6 +1326,7 @@
     "    structure_clip['azimuth2'] = structure_clip.apply(lambda row: row[c_l['dd']]+90.0, axis = 1)\n",
     "    c_l['dd']='azimuth2'\n",
     "    \n",
+    "structure_clip=structure_clip[~structure_clip[c_l['o']].isnull()]\n",
     "\n",
     "structure_clip.to_file(tmp_path+'structure_clip.shp')\n"
    ]
