bugs and features
1) check and fix  if geology and orientations share important field names
2) remove other duplicate field names before use in notbooks
3) change qLD folder name
4) add notebooks for remaining Australian states and put example zip data online

--- a/notebooks/7. TAS leaflet example.ipynb
+++ b/notebooks/7. TAS leaflet example.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "<img src='../graphics/loop_sm.png'>\n",
     "   \n",
-    "   This notebook allows you to select a rectangular sub-area in South Australia, Australia, and using <a href=\"https://www.mrt.tas.gov.au/home\" target=\"_blank\">MRT</a>  geology polygons, bedding orientation data and fault polylines, calculates the topological relationships between the different features. All the data is Open Access and is served on a Loop WFS server.\n",
+    "   This notebook allows you to select a rectangular sub-area in Tasmania, Australia, and using <a href=\"https://www.mrt.tas.gov.au/home\" target=\"_blank\">MRT</a>  geology polygons, bedding orientation data and fault polylines, calculates the topological relationships between the different features. All the data is Open Access and is served on a Loop WFS server.\n",
     "\n",
     "This all gets fed into successive tolopogical and geometric transfroms that end up feeding into a mdelling engine to make a 3D model.  \n",
     "  \n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,24 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3c0535bd3904a2982c1754d09e42ee2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Map area:', options=('Draw Your Own', 'Last Area Drawn'), value='Draw Your Own')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
     "import os\n",
@@ -113,17 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Draw Your Own\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_data_name=map_choice.value\n",
     "print(test_data_name)\n",
@@ -137,40 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d687d4347c64ab2b3a9b53b66fa7831",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Label(value='')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a601440dfd5b4c9bb1e7b431225f652f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[-41.3, 147.2], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_o…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import folium\n",
     "import pandas as pd\n",
@@ -193,7 +141,7 @@
     "        maxx=last_coords.iloc[0]['maxx']\n",
     "        maxy=last_coords.iloc[0]['maxy']\n",
     "    src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
-    "    dst_crs = \"epsg:28352\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
+    "    dst_crs = \"epsg:28355\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
     "\n",
     "    bbox2=str(minx)+\",\"+str(miny)+\",\"+str(maxx)+\",\"+str(maxy)\n",
     "    y_point_list = [miny, miny, maxy, maxy, maxy]\n",
@@ -222,15 +170,15 @@
     "                   name = 'Example')\n",
     "    center=(minlat+((maxlat-minlat)/2),minlong+((maxlong-minlong)/2))\n",
     "else:\n",
-    "    center=(-41.3,147.2)\n",
+    "    center=(-41.6,145.4)\n",
     "    \n",
     "wms_warox = WMSLayer(\n",
     "    url='http://geo.loop-gis.org/geoserver/MRT/wms?',\n",
     "    layers='MRT:geol_struc_250',\n",
     "    format='image/png',\n",
     "    transparent=True,\n",
-    "    attribution='Fault data from GSSA',\n",
-    "    name='faults'\n",
+    "    attribution='Outcrop data from MRT',\n",
+    "    name='outcrop'\n",
     "\n",
     ")\n",
     "wms_geol = WMSLayer(\n",
@@ -239,7 +187,7 @@
     "    format='image/png',\n",
     "    transparent=True,\n",
     "    opacity=0.4,\n",
-    "    attribution='Geology data from GSSA',\n",
+    "    attribution='Geology data from MRT',\n",
     "    name='geology'\n",
     "\n",
     ")\n",
@@ -315,7 +263,7 @@
     "        \n",
     "    bounds=(minlong,maxlong,minlat,maxlat)\n",
     "    src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
-    "    dst_crs = \"epsg:28352\" # coordinate system for example data\n",
+    "    dst_crs = \"epsg:28355\" # coordinate system for example data\n",
     "\n",
     "\n",
     "    lat_point_list = [minlat, minlat, maxlat, maxlat,maxlat]\n",
@@ -455,7 +403,7 @@
     "\n",
     "    os.chdir('../TAS/')\n",
     "    #%run -i \"m2l_config.py\"\n",
-    "    %run -i \"m2l_config_remote.py\"\n",
+    "    %run -i \"m2l_config.py\"\n",
     "    print(os.getcwd())\n",
     "    \n",
     "else:\n",
@@ -514,9 +462,9 @@
     "\n",
     "#spacing=500   #grid spacing in metres of interpolation points\n",
     "\n",
-    "Australia=True\n",
+    "Australia=False # Only in the sense I can't link to ASUD codes!!\n",
     "\n",
-    "drift_prefix=['None']\n",
+    "drift_prefix=['Q','T','Unknown']\n",
     "\n",
     "#################################\n",
     "# There are many alternative datasets that \n",
@@ -860,7 +808,16 @@
    "outputs": [],
    "source": [
     "hint_flag=False # use GSWA strat database to provide relative age hints\n",
-    "sub_geol = geology_ll[['geometry', c_l['o'],c_l['c'],c_l['g'],c_l['u'],c_l['min'],c_l['max'],c_l['ds'],c_l['r1'],c_l['r2']]]\n",
+    "def unique_list(list1): \n",
+    "      \n",
+    "    # insert the list to the set \n",
+    "    list_set = set(list1) \n",
+    "    # convert the set to the list \n",
+    "    return(list(list_set)) \n",
+    "list1=['geometry', c_l['o'],c_l['c'],c_l['g'],c_l['u'],c_l['min'],c_l['max'],c_l['ds'],c_l['r1'],c_l['r2']]\n",
+    "list2=unique_list(list1)\n",
+    "\n",
+    "sub_geol = geology_ll[list2]\n",
     "m2l_topology.save_geol_wkt(sub_geol,geology_file_csv, c_l,hint_flag)"
    ]
   },
@@ -1054,7 +1011,9 @@
     "if(Australia):\n",
     "    asud_strat_file='../source_data/ASUD.csv'\n",
     "    m2l_topology.use_asud(strat_graph_file, asud_strat_file,graph_path)\n",
-    "    strat_graph_file=graph_path+'ASUD_strat.gml'\n"
+    "    strat_graph_file=graph_path+'ASUD_strat.gml'\n",
+    "else:\n",
+    "    asud_strat_file=''\n"
    ]
   },
   {
@@ -1301,9 +1260,12 @@
     "print(fault_file)\n",
     "if(os.path.exists(fault_file)):\n",
     "    faults_clip = gpd.read_file(fault_file,bbox=bbox)\n",
-    "    faults_clip.crs=dst_crs\n",
-    "\n",
-    "sub_pts = structure[['geometry',c_l['d'],c_l['dd'],c_l['sf'],c_l['bo']]] \n",
+    "    faults_clip.crs=dst_crs   \n",
+    "    \n",
+    "list1=['geometry',c_l['d'],c_l['dd'],c_l['sf'],c_l['bo']]\n",
+    "list2=unique_list(list1)\n",
+    "       \n",
+    "sub_pts = structure[list2] \n",
     "\n",
     "base=geology.plot(column=c_l['c'],figsize=(10,10),edgecolor='#000000',linewidth=0.2)\n",
     "sub_pts.plot(ax=base,edgecolor='black')\n",
@@ -1317,6 +1279,24 @@
    },
    "source": [
     "## Join geology and structures, save fold axial traces"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-02T06:36:40.957911Z",
+     "start_time": "2020-06-02T06:36:38.733913Z"
+    },
+    "pycharm": {
+     "is_executing": false
+    },
+    "scrolled": false
+   },
+   "source": [
+    "if(c_l['sf']==c_l['ds']):\n",
+    "    sub_pts2=sub_pts.rename(columns={c_l['sf']:c_l['sf']+'_NEW'}, errors=\"raise\")\n",
+    "    c_l['sf']=c_l['sf']+'_NEW'\n"
    ]
   },
   {
@@ -1358,7 +1338,7 @@
     "    \n",
     "structure_clip=structure_clip[~structure_clip[c_l['o']].isnull()]\n",
     "\n",
-    "structure_clip.to_file(tmp_path+'structure_clip.shp')\n"
+    "structure_clip.to_file(tmp_path+'structure_clip.shp')"
    ]
   },
   {
