--- a/notebooks/0. Generic map processing.ipynb
+++ b/notebooks/0. Generic map processing.ipynb
@@ -205,6 +205,8 @@
     "\n",
     "local_paths=True\n",
     "\n",
+    "drift_prefix=''\n",
+    "\n",
     "#################################\n",
     "# There are many alternative datasets that \n",
     "# can be extracted from the input data, \n",
@@ -348,7 +350,7 @@
    },
    "outputs": [],
    "source": [
-    "structure_file,geology_file,fault_file,mindep_file,fold_file=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths)"
+    "structure_file,geology_file,fault_file,mindep_file,fold_file=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths,drift_prefix)"
    ]
   },
   {
@@ -530,7 +532,16 @@
    "outputs": [],
    "source": [
     "hint_flag=False # use GSWA strat database to provide relative age hints\n",
-    "sub_geol = geology_ll[['geometry', c_l['o'],c_l['c'],c_l['g'],c_l['u'],c_l['min'],c_l['max'],c_l['ds'],c_l['r1'],c_l['r2']]]\n",
+    "def unique_list(list1): \n",
+    "      \n",
+    "    # insert the list to the set \n",
+    "    list_set = set(list1) \n",
+    "    # convert the set to the list \n",
+    "    return(list(list_set)) \n",
+    "list1=['geometry', c_l['o'],c_l['c'],c_l['g'],c_l['u'],c_l['min'],c_l['max'],c_l['ds'],c_l['r1'],c_l['r2']]\n",
+    "list2=unique_list(list1)\n",
+    "\n",
+    "sub_geol = geology_ll[list2]\n",
     "m2l_topology.save_geol_wkt(sub_geol,geology_file_csv, c_l,hint_flag)"
    ]
   },
@@ -959,7 +970,10 @@
     "    faults_clip = gpd.read_file(fault_file,bbox=bbox)\n",
     "    faults_clip.crs=dst_crs\n",
     "\n",
-    "sub_pts = structure[['geometry',c_l['d'],c_l['dd'],c_l['sf'],c_l['bo']]] \n",
+    "list1=['geometry',c_l['d'],c_l['dd'],c_l['sf'],c_l['bo']]\n",
+    "list2=unique_list(list1)\n",
+    "       \n",
+    "sub_pts = structure[list2] \n",
     "\n",
     "base=geology.plot(column=c_l['c'],figsize=(10,10),edgecolor='#000000',linewidth=0.2)\n",
     "sub_pts.plot(ax=base,edgecolor='black')\n",
