--- a/notebooks/1. Hamersley map processing.ipynb
+++ b/notebooks/1. Hamersley map processing.ipynb
@@ -575,7 +575,16 @@
    "outputs": [],
    "source": [
     "hint_flag=False # use GSWA strat database to provide relative age hints\n",
-    "sub_geol = geology_ll[['geometry', c_l['o'],c_l['c'],c_l['g'],c_l['u'],c_l['min'],c_l['max'],c_l['ds'],c_l['r1'],c_l['r2']]]\n",
+    "def unique_list(list1): \n",
+    "      \n",
+    "    # insert the list to the set \n",
+    "    list_set = set(list1) \n",
+    "    # convert the set to the list \n",
+    "    return(list(list_set)) \n",
+    "list1=['geometry', c_l['o'],c_l['c'],c_l['g'],c_l['u'],c_l['min'],c_l['max'],c_l['ds'],c_l['r1'],c_l['r2']]\n",
+    "list2=unique_list(list1)\n",
+    "\n",
+    "sub_geol = geology_ll[list2]\n",
     "m2l_topology.save_geol_wkt(sub_geol,geology_file_csv, c_l,hint_flag)"
    ]
   },
@@ -1004,7 +1013,10 @@
     "    faults_clip = gpd.read_file(fault_file,bbox=bbox)\n",
     "    faults_clip.crs=dst_crs\n",
     "\n",
-    "sub_pts = structure[['geometry',c_l['d'],c_l['dd'],c_l['sf'],c_l['bo']]] \n",
+    "list1=['geometry',c_l['d'],c_l['dd'],c_l['sf'],c_l['bo']]\n",
+    "list2=unique_list(list1)\n",
+    "       \n",
+    "sub_pts = structure[list2] \n",
     "\n",
     "base=geology.plot(column=c_l['c'],figsize=(10,10),edgecolor='#000000',linewidth=0.2)\n",
     "sub_pts.plot(ax=base,edgecolor='black')\n",
@@ -1808,7 +1820,7 @@
     "if(workflow['model_engine']=='geomodeller'):\n",
     "    from datetime import datetime\n",
     "    import shutil\n",
-    "\n",
+    "   \n",
     "    \n",
     "    m2l_topology.check_near_fault_contacts(tmp_path+'faults_clip.shp',tmp_path+'all_sorts_clean.csv',\n",
     "                                           output_path+'fault_dimensions.csv',output_path+'group-fault-relationships.csv',\n",
@@ -1860,6 +1872,7 @@
     "    import lavavu\n",
     "    from LoopStructural.visualisation import LavaVuModelViewer\n",
     "    from LoopStructural import GeologicalModel\n",
+    "    import surfepy\n",
     "    import logging\n",
     "    logging.getLogger().setLevel(logging.ERROR)\n",
     "    # ##############################\n",
