--- a/notebooks/2. QLD leaflet example.ipynb
+++ b/notebooks/2. QLD leaflet example.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### If not already available, the notebook will first download a 60 MB data package to set things up, this may take a few minutes, depending on your network speed. Once downloaded, this will not need to happen again (unless you delete the qld_src_data directory)"
+    "#### If not already available, the notebook will first download a 60 MB data package to set things up, this may take a few minutes, depending on your network speed. Once downloaded, this will not need to happen again (unless you delete the QLD directory)"
    ]
   },
   {
@@ -51,11 +51,11 @@
     "from urllib.request import urlopen\n",
     "from io import BytesIO\n",
     "\n",
-    "if(not os.path.isdir('../qld_src_data/data')):\n",
+    "if(not os.path.isdir('../QLD/data')):\n",
     "\n",
-    "    with urlopen('http://geo.loop-gis.org/files/qdata.zip') as zipresp:\n",
+    "    with urlopen('http://geo.loop-gis.org/files/QLDdata.zip') as zipresp:\n",
     "        with ZipFile(BytesIO(zipresp.read())) as zfile:\n",
-    "            zfile.extractall('../qld_src_data/')"
+    "            zfile.extractall('../QLD/')"
    ]
   },
   {
@@ -72,17 +72,17 @@
     "if(not os.path.isdir('../scratch/')):\n",
     "    os.mkdir('../scratch/')\n",
     "\n",
-    "if(os.path.isfile('../qld_src_data/last_choices2.txt')):\n",
-    "    f=open('../qld_src_data/last_choices2.txt','r')\n",
+    "if(os.path.isfile('../QLD/last_choices2.txt')):\n",
+    "    f=open('../QLD/last_choices2.txt','r')\n",
     "    contents =f.readlines()\n",
     "    f.close()\n",
     "    default_map=contents[0].replace(\"\\n\",\"\")\n",
     "    default_engine=contents[1].replace(\"\\n\",\"\")\n",
     "else:\n",
-    "    default_map='qld_src_data'\n",
+    "    default_map='QLD'\n",
     "    default_engine='loopstructural'\n",
     "\n",
-    "options=['qld_src_data','Draw Your Own','Last Area Drawn']\n",
+    "options=['QLD','Draw Your Own','Last Area Drawn']\n",
     "\n",
     "if(not default_map in options):\n",
     "    default_map= options[0]\n",
@@ -134,7 +134,7 @@
     "\n",
     "if(not test_data_name =='Draw Your Own'):\n",
     "    if(test_data_name=='Last Area Drawn'):\n",
-    "        last_coords=pd.read_csv('../qld_src_data/last_area2.csv')\n",
+    "        last_coords=pd.read_csv('../QLD/last_area2.csv')\n",
     "        display(last_coords)\n",
     "        minx=last_coords.iloc[0]['minx']\n",
     "        miny=last_coords.iloc[0]['miny']\n",
@@ -276,7 +276,7 @@
     "    mbbox=mbbox.to_crs(dst_crs)\n",
     "    print(dst_crs,mbbox.total_bounds)\n",
     "    \n",
-    "    f=open('../qld_src_data/last_area2.csv','w') \n",
+    "    f=open('../QLD/last_area2.csv','w') \n",
     "    ostr='minx,miny,maxx,maxy\\n'\n",
     "    f.write(ostr)\n",
     "    ostr=str(minlong)+','+str(minlat)+','+str(maxlong)+','+str(maxlat)+'\\n'\n",
@@ -327,7 +327,7 @@
     "workflow={'model_engine':engine_choice.value} \n",
     "print(workflow['model_engine'])\n",
     "# save last map and engine choices\n",
-    "f=open('../qld_src_data/last_choices2.txt','w') \n",
+    "f=open('../QLD/last_choices2.txt','w') \n",
     "ostr=str(map_choice.value)+'\\n'+str(engine_choice.value)+'\\n'\n",
     "f.write(ostr)\n",
     "f.close()"
@@ -397,7 +397,7 @@
    "outputs": [],
    "source": [
     "if(test_data_name=='Draw Your Own' or test_data_name=='Last Area Drawn' ):\n",
-    "    test_data_path='../qld_src_data/'\n",
+    "    test_data_path='../QLD/'\n",
     "    minx=mbbox.total_bounds[0]\n",
     "    maxx=mbbox.total_bounds[2]\n",
     "    miny=mbbox.total_bounds[1]\n",
@@ -405,7 +405,7 @@
     "    \n",
     "    bbox2=str(minx)+\",\"+str(miny)+\",\"+str(maxx)+\",\"+str(maxy)\n",
     "\n",
-    "    os.chdir('../qld_src_data/')\n",
+    "    os.chdir('../QLD/')\n",
     "    %run -i \"m2l_config_remote.py\"\n",
     "    #%run -i \"m2l_config_remote.py\"\n",
     "    print(os.getcwd())\n",
@@ -612,8 +612,8 @@
    "source": [
     "#Local copy until I fix WFS download bug for this layer\n",
     "\n",
-    "if(not test_data_name=='qld_src_data'):\n",
-    "    geology_file='../qld_src_data/data/qld_geol_asud.shp'\n",
+    "if(not test_data_name=='QLD'):\n",
+    "    geology_file='../QLD/data/qld_geol_asud.shp'\n",
     "\n",
     "\n",
     "\n"
@@ -802,7 +802,16 @@
    "outputs": [],
    "source": [
     "hint_flag=False # use GSWA strat database to provide relative age hints\n",
-    "sub_geol = geology_ll[['geometry', c_l['o'],c_l['c'],c_l['g'],c_l['u'],c_l['min'],c_l['max'],c_l['ds'],c_l['r1'],c_l['r2']]]\n",
+    "def unique_list(list1): \n",
+    "      \n",
+    "    # insert the list to the set \n",
+    "    list_set = set(list1) \n",
+    "    # convert the set to the list \n",
+    "    return(list(list_set)) \n",
+    "list1=['geometry', c_l['o'],c_l['c'],c_l['g'],c_l['u'],c_l['min'],c_l['max'],c_l['ds'],c_l['r1'],c_l['r2']]\n",
+    "list2=unique_list(list1)\n",
+    "\n",
+    "sub_geol = geology_ll[list2]\n",
     "m2l_topology.save_geol_wkt(sub_geol,geology_file_csv, c_l,hint_flag)"
    ]
   },
@@ -1244,7 +1253,10 @@
     "    faults_clip = gpd.read_file(fault_file,bbox=bbox)\n",
     "    faults_clip.crs=dst_crs\n",
     "\n",
-    "sub_pts = structure[['geometry',c_l['d'],c_l['dd'],c_l['sf'],c_l['bo']]] \n",
+    "list1=['geometry',c_l['d'],c_l['dd'],c_l['sf'],c_l['bo']]\n",
+    "list2=unique_list(list1)\n",
+    "       \n",
+    "sub_pts = structure[list2] \n",
     "\n",
     "base=geology.plot(column=c_l['c'],figsize=(10,10),edgecolor='#000000',linewidth=0.2)\n",
     "sub_pts.plot(ax=base,edgecolor='black')\n",
