--- a/notebooks/2. QLD map processing.ipynb
+++ b/notebooks/2. QLD map processing.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### If not already available, the notebook will first download a 60 MB data package to set things up, this may take a few minutes, depending on your network speed. Once downloaded, this will not need to happen again (unless you delete the qld_src_data directory)"
+    "#### If not already available, the notebook will first download a 60 MB data package to set things up, this may take a few minutes, depending on your network speed. Once downloaded, this will not need to happen again (unless you delete the QLD directory)"
    ]
   },
   {
@@ -40,11 +40,11 @@
     "from urllib.request import urlopen\n",
     "from io import BytesIO\n",
     "\n",
-    "if(not os.path.isdir('../NSW/data')):\n",
+    "if(not os.path.isdir('../QLD/data')):\n",
     "\n",
-    "    with urlopen('http://geo.loop-gis.org/files/data.zip') as zipresp:\n",
+    "    with urlopen('http://geo.loop-gis.org/files/QLDdata.zip') as zipresp:\n",
     "        with ZipFile(BytesIO(zipresp.read())) as zfile:\n",
-    "            zfile.extractall('../NSW/')"
+    "            zfile.extractall('../QLD/')"
    ]
   },
   {
@@ -69,10 +69,10 @@
     "    default_map=contents[0].replace(\"\\n\",\"\")\n",
     "    default_engine=contents[1].replace(\"\\n\",\"\")\n",
     "else:\n",
-    "    default_map='qld_src_data'\n",
+    "    default_map='QLD'\n",
     "    default_engine='loopstructural'\n",
     "    \n",
-    "options=['qld_src_data']\n",
+    "options=['QLD']\n",
     "\n",
     "if(not default_map in options):\n",
     "    default_map= options[0]\n",
@@ -213,7 +213,6 @@
    },
    "outputs": [],
    "source": [
-    "#test_data_name='qld_src_data'\n",
     "\n",
     "test_data_path='../'+test_data_name+'/'\n",
     "os.chdir(test_data_path)\n",
@@ -597,7 +596,16 @@
    "outputs": [],
    "source": [
     "hint_flag=False # use GSWA strat database to provide relative age hints\n",
-    "sub_geol = geology_ll[['geometry', c_l['o'],c_l['c'],c_l['g'],c_l['u'],c_l['min'],c_l['max'],c_l['ds'],c_l['r1'],c_l['r2']]]\n",
+    "def unique_list(list1): \n",
+    "      \n",
+    "    # insert the list to the set \n",
+    "    list_set = set(list1) \n",
+    "    # convert the set to the list \n",
+    "    return(list(list_set)) \n",
+    "list1=['geometry', c_l['o'],c_l['c'],c_l['g'],c_l['u'],c_l['min'],c_l['max'],c_l['ds'],c_l['r1'],c_l['r2']]\n",
+    "list2=unique_list(list1)\n",
+    "\n",
+    "sub_geol = geology_ll[list2]\n",
     "m2l_topology.save_geol_wkt(sub_geol,geology_file_csv, c_l,hint_flag)"
    ]
   },
@@ -1023,7 +1031,10 @@
     "    faults_clip = gpd.read_file(fault_file,bbox=bbox)\n",
     "    faults_clip.crs=dst_crs\n",
     "\n",
-    "sub_pts = structure[['geometry',c_l['d'],c_l['dd'],c_l['sf'],c_l['bo']]] \n",
+    "list1=['geometry',c_l['d'],c_l['dd'],c_l['sf'],c_l['bo']]\n",
+    "list2=unique_list(list1)\n",
+    "       \n",
+    "sub_pts = structure[list2] \n",
     "\n",
     "base=geology.plot(column=c_l['c'],figsize=(10,10),edgecolor='#000000',linewidth=0.2)\n",
     "sub_pts.plot(ax=base,edgecolor='black')\n",
