--- a/notebooks/1. Hamersley map processing.ipynb
+++ b/notebooks/1. Hamersley map processing.ipynb
@@ -1065,9 +1065,10 @@
     "structure_clip.crs = dst_crs\n",
     "\n",
     "\n",
-    "if(c_l['dd']=='strike'):\n",
+    "if(c_l['otype']=='strike'):\n",
     "    structure_clip['azimuth2'] = structure_clip.apply(lambda row: row[c_l['dd']]+90.0, axis = 1)\n",
     "    c_l['dd']='azimuth2'\n",
+    "    c_l['otype']='dip direction'\n",
     "    \n",
     "structure_clip=structure_clip[~structure_clip[c_l['o']].isnull()]\n",
     "\n",
@@ -1872,12 +1873,12 @@
     "    import lavavu\n",
     "    from LoopStructural.visualisation import LavaVuModelViewer\n",
     "    from LoopStructural import GeologicalModel\n",
-    "    import surfepy\n",
+    "    #import surfepy\n",
     "    import logging\n",
     "    logging.getLogger().setLevel(logging.ERROR)\n",
     "    # ##############################\n",
     "    # uncomment next line and point to your compiled surfe library if you have one and want to use surfe\n",
-    "    os.environ['SURFE'] = 'C:/Users/00073294/Dropbox/1_Jupyter_notebooks/surfe/Release/'\n",
+    "    # os.environ['SURFE'] = 'C:/Users/00073294/Dropbox/1_Jupyter_notebooks/surfe/Release/'\n",
     "    # ##############################\n",
     "    f=open(tmp_path+'bbox.csv','w')\n",
     "    f.write('minx,miny,maxx,maxy,lower,upper\\n')\n",
@@ -1970,6 +1971,27 @@
     "        m2l_export.display_LS_map(model,dtm,geol_clip,f_clip,dst_crs,use_topo=True,use_faults=False)\n",
     "\n",
     "    dtm.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.colors as colors\n",
+    "colours = []\n",
+    "boundaries = []\n",
+    "data = []\n",
+    "all_sorts=pd.read_csv(tmp_path+'all_sorts_clean.csv')\n",
+    "for ind,a_s in all_sorts.iterrows():\n",
+    "    colours.append(m2l_utils.hextofloats(a_s['colour']))\n",
+    "    \n",
+    "test = colors.ListedColormap(colours)\n",
+    "geology = gpd.read_file(tmp_path+'geol_clip.shp')\n",
+    "geology.plot(column='UNITNAME',figsize=(10,10),edgecolor='#000000',linewidth=2,cmap=test)\n"
    ]
   },
   {
