--- a/notebooks/1. WA leaflet example.ipynb
+++ b/notebooks/1. WA leaflet example.ipynb
@@ -10,7 +10,7 @@
     "   \n",
     "   This notebook allows you to select a rectangular sub-area in Western Australia, and using <a href=\"https://www.dmp.wa.gov.au/Geological-Survey/Geological-Survey-262.aspx\">GSWA</a>  geology polygons, bedding orientation data and fault polylines, calculates the topological relationships between the different features. All the data is Open Access and is served on a Loop WFS server.\n",
     "\n",
-    "This all gets fed into successive tolopogical and geometric transfroms that end up feeding into a mdelling engine to make a 3D model.  \n",
+    "This all gets fed into successive tolopogical and geometric transfroms that end up feeding into a modelling engine to make a 3D model.  \n",
     "  \n",
     "\n",
     "<font color='red'>The leaflet version here dangerously allows you to select your own area from the map, this is just for showing off, as in many parts of Western Australia, the area we focus on here, there isn't enough data in the map alone to make a decent 3D model</font>   \n",
@@ -72,7 +72,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "test_data_name=map_choice.value\n",
@@ -203,8 +205,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "1.#!conda install -c conda-forge ipyleaflet -y\n",
-    "2#!jupyter nbextension enable --py --sys-prefix ipyleaflet\n"
+    "#!conda install -c conda-forge ipyleaflet -y\n",
+    "#!jupyter nbextension enable --py --sys-prefix ipyleaflet\n"
    ]
   },
   {
@@ -450,7 +452,7 @@
     "#\n",
     "#############################################\n",
     "workflow={'model_engine':engine_choice.value} \n",
-    "c_l[\"intrusive\"]= 'granitic'\n",
+    "\n",
     "if(workflow['model_engine']=='geomodeller'):\n",
     "    workflow.update( {'seismic_section':False,\n",
     "          'cover_map':False,\n",
@@ -579,7 +581,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "structure_file,geology_file,fault_file,mindep_file,fold_file,c_l=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths,drift_prefix)"
+    "structure_file,geology_file,fault_file,mindep_file,fold_file,c_l=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths,drift_prefix)\n"
    ]
   },
   {
@@ -693,7 +695,7 @@
     "inputs=('')\n",
     "\n",
     "if(workflow['model_engine'] =='geomodeller'):\n",
-    "    inputs=('invented_orientations','intrusive_orientations','fat_orientations','near_fault_orientations','fault_tip_contacts','contact_orientations')\n",
+    "    inputs=('invented_orientations','intrusive_orientations','fat_orientations','fault_tip_contacts','contact_orientations')\n",
     "elif(workflow['model_engine']=='loopstructural'):\n",
     "    inputs=('invented_orientations','fat_orientations','contact_orientations')\n",
     "elif(workflow['model_engine']=='gempy'):\n",
@@ -720,7 +722,7 @@
     "pycharm": {
      "is_executing": false
     },
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -957,8 +959,8 @@
    "outputs": [],
    "source": [
     "if(Australia):\n",
-    "    asad_strat_file='../source_data/ASUD.csv'\n",
-    "    m2l_topology.use_asud(strat_graph_file, asad_strat_file,graph_path)\n",
+    "    asud_strat_file='../source_data/ASUD.csv'\n",
+    "    m2l_topology.use_asud(strat_graph_file, asud_strat_file,graph_path)\n",
     "    strat_graph_file=graph_path+'ASUD_strat.gml'\n"
    ]
   },
@@ -1148,7 +1150,7 @@
    "outputs": [],
    "source": [
     "groups,glabels,G = m2l_topology.get_series(strat_graph_file,'id')\n",
-    "m2l_topology.save_units(G,tmp_path,glabels,Australia,asad_strat_file)"
+    "m2l_topology.save_units(G,tmp_path,glabels,Australia,asud_strat_file)"
    ]
   },
   {
@@ -1193,7 +1195,6 @@
     "\n",
     "list1=['geometry',c_l['d'],c_l['dd'],c_l['sf'],c_l['bo']]\n",
     "list2=unique_list(list1)\n",
-    "       \n",
     "sub_pts = structure[list2] \n",
     "\n",
     "base=geology.plot(column=c_l['c'],figsize=(10,10),edgecolor='#000000',linewidth=0.2)\n",
@@ -1221,7 +1222,7 @@
     "pycharm": {
      "is_executing": false
     },
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -1229,6 +1230,7 @@
     "geol_clip.crs = dst_crs\n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.max_rows',None)\n",
+    "\n",
     "structure_code = gpd.sjoin(sub_pts, geol_clip, how=\"left\", op=\"within\")\n",
     "\n",
     "y_point_list = [miny, miny, maxy, maxy, miny]\n",
@@ -1243,9 +1245,10 @@
     "structure_clip.crs = dst_crs\n",
     "\n",
     "\n",
-    "if(c_l['dd']=='strike'):\n",
+    "if(c_l['otype']=='strike'):\n",
     "    structure_clip['azimuth2'] = structure_clip.apply(lambda row: row[c_l['dd']]+90.0, axis = 1)\n",
     "    c_l['dd']='azimuth2'\n",
+    "    c_l['otype']='dip direction'\n",
     "    \n",
     "structure_clip=structure_clip[~structure_clip[c_l['o']].isnull()]\n",
     "\n",
