--- a/notebooks/3. NSW leaflet example.ipynb
+++ b/notebooks/3. NSW leaflet example.ipynb
@@ -1288,9 +1288,10 @@
     "structure_clip.crs = dst_crs\n",
     "\n",
     "\n",
-    "if(c_l['dd']=='strike'):\n",
+    "if(c_l['otype']=='strike'):\n",
     "    structure_clip['azimuth2'] = structure_clip.apply(lambda row: row[c_l['dd']]+90.0, axis = 1)\n",
     "    c_l['dd']='azimuth2'\n",
+    "    c_l['otype']='dip direction'\n",
     "    \n",
     "structure_clip=structure_clip[~structure_clip[c_l['o']].isnull()]\n",
     "\n",
