--- a/notebooks/7. TAS leaflet example.ipynb
+++ b/notebooks/7. TAS leaflet example.ipynb
@@ -464,7 +464,7 @@
     "\n",
     "Australia=False # Only in the sense I can't link to ASUD codes!!\n",
     "\n",
-    "drift_prefix=['Q','T','Unknown']\n",
+    "drift_prefix=['Q','T','Unknown','Water']\n",
     "\n",
     "#################################\n",
     "# There are many alternative datasets that \n",
@@ -1332,9 +1332,10 @@
     "structure_clip.crs = dst_crs\n",
     "\n",
     "\n",
-    "if(c_l['dd']=='strike'):\n",
+    "if(c_l['otype']=='strike'):\n",
     "    structure_clip['azimuth2'] = structure_clip.apply(lambda row: row[c_l['dd']]+90.0, axis = 1)\n",
     "    c_l['dd']='azimuth2'\n",
+    "    c_l['otype']='dip direction'\n",
     "    \n",
     "structure_clip=structure_clip[~structure_clip[c_l['o']].isnull()]\n",
     "\n",
@@ -1924,7 +1925,7 @@
     "\n",
     "    m2l_geometry.normalise_thickness(output_path)\n",
     "    \n",
-    "    m2l_utils.plot_points(output_path+'formation_thicknesses_norm.csv',geol_clip,'norm_th','x','y',True,'numeric')\n"
+    "    m2l_utils.plot_points(output_path+'formation_thicknesses_norm.csv',geol_clip,'norm_th','x','y',True,'numeric')"
    ]
   },
   {
