update to new source map and more decimation in notebook
new geology map with more coherent stratigraphic coding
decimation valus bumped up for orientations

--- a/notebooks/6. SA leaflet example.ipynb
+++ b/notebooks/6. SA leaflet example.ipynb
@@ -5,14 +5,14 @@
    "metadata": {},
    "source": [
     "## map2loop: South Australia\n",
-    "# NOT CONNECTED TO DATASETS (YET)...\n",
     "\n",
     "<img src='../graphics/loop_sm.png'>\n",
     "   \n",
     "   This notebook allows you to select a rectangular sub-area in South Australia, Australia, and using <a href=\"http://www.energymining.sa.gov.au/minerals/geoscience/geological_survey\" target=\"_blank\">SA</a>  geology polygons, bedding orientation data and fault polylines, calculates the topological relationships between the different features. All the data is Open Access and is served on a Loop WFS server.\n",
     "\n",
     "This all gets fed into successive tolopogical and geometric transfroms that end up feeding into a mdelling engine to make a 3D model.  \n",
-    "  \n",
+    "\n",
+    "For this map there is a mixing of Formations, Groups and Supergroups for the polygins, so I manually edited the shapefile to make it more coherent. Ned to think how to do this automatically. Also defined relative stratigrpahy manually.\n",
     "\n",
     "<font color='red'>The leaflet version here dangerously allows you to select your own area from the map, this is just for showing off, as in many parts of SA, the area we focus on here, there isn't enough data in the map alone to make a decent 3D model</font>   \n",
     "\n",
@@ -442,7 +442,7 @@
     "\n",
     "contact_decimate=5\n",
     "\n",
-    "orientation_decimate=0\n",
+    "orientation_decimate=20\n",
     "\n",
     "use_interpolations=True       #use interpolated dips/contacts as additional constraints\n",
     "\n",
@@ -463,7 +463,7 @@
     "\n",
     "Australia=True\n",
     "\n",
-    "drift_prefix=['T','Q']\n",
+    "drift_prefix=['T','Q','water','void']\n",
     "\n",
     "#################################\n",
     "# There are many alternative datasets that \n",
@@ -649,7 +649,7 @@
      "end_time": "2020-06-02T06:36:23.738017Z",
      "start_time": "2020-06-02T06:36:11.334988Z"
     },
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
