--- a/notebooks/4. NT leaflet example.ipynb
+++ b/notebooks/4. NT leaflet example.ipynb
@@ -166,6 +166,11 @@
     "    example_rect = GeoData(geo_dataframe = rect,\n",
     "                   style={'color': 'purple', 'opacity':3, 'weight':1.9, 'dashArray':'2', 'fillOpacity':0.6},                  \n",
     "                   name = 'Example')\n",
+    "    if(test_data_name=='Last Area Drawn'):\n",
+    "        roi_poly=gpd.read_file('../NT/tmp/roi_poly.shp')\n",
+    "        example_rect = GeoData(geo_dataframe = roi_poly,\n",
+    "                   style={'color': 'purple', 'opacity':3, 'weight':1.9, 'dashArray':'2', 'fillOpacity':0.6},                  \n",
+    "                   name = 'Example')\n",
     "    center=(minlat+((maxlat-minlat)/2),minlong+((maxlong-minlong)/2))\n",
     "else:\n",
     "    center=(-13.58,131.2)\n",
@@ -246,14 +251,14 @@
     "if(test_data_name=='Draw Your Own' or test_data_name=='Last Area Drawn'):\n",
     "    if(test_data_name=='Draw Your Own'):\n",
     "        new_poly=GeoJSON(data=dc.last_draw)\n",
-    "        new_poly=str(new_poly)\n",
+    "        old_poly=str(new_poly)\n",
     "\n",
-    "        if(\"'geometry': None\" in new_poly):\n",
+    "        if(\"'geometry': None\" in old_poly):\n",
     "            raise NameError('map2loop error: No rectangle selected')\n",
-    "        new_poly=new_poly.rsplit(\"'coordinates': \", 1)[1]\n",
-    "        new_poly=new_poly.replace('[[[','').replace('[','').replace(']]]}})','').replace('],','').replace(',','').split(\" \")\n",
-    "        longs=new_poly[0::2]\n",
-    "        lats=new_poly[1::2]\n",
+    "        old_poly=old_poly.rsplit(\"'coordinates': \", 1)[1]\n",
+    "        old_poly=old_poly.replace('[[[','').replace('[','').replace(']]]}})','').replace('],','').replace(',','').split(\" \")\n",
+    "        longs=old_poly[0::2]\n",
+    "        lats=old_poly[1::2]\n",
     "        minlong=float(min(longs))\n",
     "        maxlong=float(max(longs))\n",
     "        minlat=float(max(lats)) #ignores sign\n",
@@ -263,6 +268,15 @@
     "    src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
     "    dst_crs = \"epsg:28352\" # coordinate system for example data\n",
     "\n",
+    "    flat_list=[item for sublist in new_poly.data['geometry']['coordinates'] for item in sublist]\n",
+    "    flat_list=[item for sublist in flat_list for item in sublist]\n",
+    "    longs=flat_list[0::2]\n",
+    "    lats=flat_list[1::2]\n",
+    "    #display(lats,longs)\n",
+    "    poly_geom = Polygon(zip(longs, lats))\n",
+    "    roi_poly = gpd.GeoDataFrame(index=[0], crs=src_crs, geometry=[poly_geom]) \n",
+    "    roi_poly.to_file('../NT/tmp/roi_poly.shp')\n",
+    "    roi_poly=roi_poly.to_crs(dst_crs)\n",
     "\n",
     "    lat_point_list = [minlat, minlat, maxlat, maxlat,maxlat]\n",
     "    lon_point_list = [minlong, maxlong, maxlong, minlong, minlong]\n",
@@ -606,7 +620,7 @@
    },
    "outputs": [],
    "source": [
-    "structure_file,geology_file,fault_file,mindep_file,fold_file,c_l=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths,drift_prefix)"
+    "structure_file,geology_file,fault_file,mindep_file,fold_file,c_l=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths,drift_prefix,roi_poly)"
    ]
   },
   {
