--- a/notebooks/m2l_paper.ipynb
+++ b/notebooks/m2l_paper.ipynb
@@ -1008,7 +1008,7 @@
     }
    ],
    "source": [
-    "structure_file,geology_file,fault_file,mindep_file,fold_file,c_l=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths,drift_prefix)\n"
+    "structure_file,geology_file,fault_file,mindep_file,fold_file,c_l=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths,drift_prefix,polygon)\n"
    ]
   },
   {
