add sill thickness calculation and fix last area for polygons
Updated 1 WA leaflet notebook to match and fixed bug in last area calc

last area bug needs to be fixed in othe rnotebooks

--- a/notebooks/1. WA leaflet example.ipynb
+++ b/notebooks/1. WA leaflet example.ipynb
@@ -116,6 +116,7 @@
     "        miny=last_coords.iloc[0]['miny']\n",
     "        maxx=last_coords.iloc[0]['maxx']\n",
     "        maxy=last_coords.iloc[0]['maxy']\n",
+    "        roi_poly=gpd.read_file('../scratch/tmp/roi_poly.shp')\n",
     "    elif(not test_data_name =='Draw Your Own'):\n",
     "        y_point_list = [miny, miny, maxy, maxy, maxy]\n",
     "        x_point_list = [minx, maxx, maxx, minx, minx]\n",
@@ -171,6 +172,7 @@
     "    \n",
     "    if(test_data_name=='Last Area Drawn'):\n",
     "        roi_poly=gpd.read_file('../scratch/tmp/roi_poly.shp')\n",
+    "        new_poly=gpd.read_file(\"../scratch/tmp/roi_poly.geojson\", driver='GeoJSON')\n",
     "        example_rect = GeoData(geo_dataframe = roi_poly,\n",
     "                   style={'color': 'purple', 'opacity':3, 'weight':1.9, 'dashArray':'2', 'fillOpacity':0.6},                  \n",
     "                   name = 'Example')\n",
@@ -257,6 +259,7 @@
     "if(test_data_name=='Draw Your Own' or test_data_name=='Last Area Drawn'):\n",
     "    if(test_data_name=='Draw Your Own'):\n",
     "        new_poly=GeoJSON(data=dc.last_draw)\n",
+    "        \n",
     "        old_poly=str(new_poly)\n",
     "\n",
     "        if(\"'geometry': None\" in old_poly):\n",
@@ -274,13 +277,14 @@
     "    src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
     "    dst_crs = \"epsg:28350\" # coordinate system for example data\n",
     "\n",
-    "    flat_list=[item for sublist in new_poly.data['geometry']['coordinates'] for item in sublist]\n",
-    "    flat_list=[item for sublist in flat_list for item in sublist]\n",
-    "    longs=flat_list[0::2]\n",
-    "    lats=flat_list[1::2]\n",
-    "    #display(lats,longs)\n",
-    "    poly_geom = Polygon(zip(longs, lats))\n",
-    "    roi_poly = gpd.GeoDataFrame(index=[0], crs=src_crs, geometry=[poly_geom]) \n",
+    "    if(test_data_name=='Draw Your Own'):    \n",
+    "        flat_list=[item for sublist in new_poly.data['geometry']['coordinates'] for item in sublist]\n",
+    "        flat_list=[item for sublist in flat_list for item in sublist]\n",
+    "        longs=flat_list[0::2]\n",
+    "        lats=flat_list[1::2]\n",
+    "        #display(lats,longs)\n",
+    "        poly_geom = Polygon(zip(longs, lats))\n",
+    "        roi_poly = gpd.GeoDataFrame(index=[0], crs=src_crs, geometry=[poly_geom]) \n",
     "    roi_poly.to_file('../scratch/tmp/roi_poly.shp')\n",
     "    roi_poly=roi_poly.to_crs(dst_crs)\n",
     "    lat_point_list = [minlat, minlat, maxlat, maxlat,maxlat]\n",
@@ -1409,22 +1413,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Process Sill contacts    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m2l_geometry.process_sills(output_path,geol_clip,dtm,dtb,dtb_null,workflow['cover_map'],contact_decimate,c_l)    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Calculate cover depth grid and contacts    \n",
     "Grid is assumed to be of depth below surface   \n",
     "\n",
@@ -1740,7 +1728,8 @@
     "ExecuteTime": {
      "end_time": "2020-06-02T06:36:57.848448Z",
      "start_time": "2020-06-02T06:36:57.367700Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -1748,6 +1737,24 @@
     "       \n",
     "plt.imshow(contact_grid, cmap=\"hsv\",origin='lower',vmin=-360,vmax=360)    \n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process sills"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "buffer =20000\n",
+    "contact_decimate=3\n",
+    "m2l_geometry.process_sills(output_path,geol_clip,dtm,dtb,dtb_null,workflow['cover_map'],contact_decimate,c_l,dip_grid,x,y,spacing,bbox,buffer)\n"
    ]
   },
   {
