update notebooks for new map colouring calls and last area polygons

--- a/notebooks/1. WA leaflet example.ipynb
+++ b/notebooks/1. WA leaflet example.ipynb
@@ -172,7 +172,6 @@
     "    \n",
     "    if(test_data_name=='Last Area Drawn'):\n",
     "        roi_poly=gpd.read_file('../scratch/tmp/roi_poly.shp')\n",
-    "        new_poly=gpd.read_file(\"../scratch/tmp/roi_poly.geojson\", driver='GeoJSON')\n",
     "        example_rect = GeoData(geo_dataframe = roi_poly,\n",
     "                   style={'color': 'purple', 'opacity':3, 'weight':1.9, 'dashArray':'2', 'fillOpacity':0.6},                  \n",
     "                   name = 'Example')\n",
@@ -2340,6 +2339,24 @@
     "    #display(colours)\n",
     "    fig, ax = matplotlib.pyplot.subplots(figsize=(15, 15))\n",
     "    geol_clip.plot(ax=ax,column='colour_index',figsize=(10,10),edgecolor='#000000',linewidth=0.2,cmap=cmap)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if(workflow['model_engine']=='loopstructural'):  \n",
+    "    dtm = rasterio.open(dtm_reproj_file)\n",
+    "    if(os.path.exists(fault_file)):\n",
+    "        f_clip=faults_clip[faults_clip[c_l['f']].str.contains(c_l['fault'])]\n",
+    "        m2l_export.display_LS_map(model,dtm,geol_clip,f_clip,dst_crs,True,cmap,use_topo=True,use_faults=True)\n",
+    "    else:\n",
+    "        f_clip=[]\n",
+    "        m2l_export.display_LS_map(model,dtm,geol_clip,f_clip,dst_crs,True,cmap,use_topo=True,use_faults=False)\n",
+    "\n",
+    "    dtm.close()\n"
    ]
   },
   {
