--- a/notebooks/3. NSW leaflet example.ipynb
+++ b/notebooks/3. NSW leaflet example.ipynb
@@ -138,6 +138,7 @@
     "        miny=last_coords.iloc[0]['miny']\n",
     "        maxx=last_coords.iloc[0]['maxx']\n",
     "        maxy=last_coords.iloc[0]['maxy']\n",
+    "        roi_poly=gpd.read_file('../scratch/NSW/roi_poly.shp')\n",
     "    src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
     "    dst_crs = \"epsg:28355\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
     "\n",
@@ -268,13 +269,14 @@
     "    src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
     "    dst_crs = \"epsg:28355\" # coordinate system for example data\n",
     "\n",
-    "    flat_list=[item for sublist in new_poly.data['geometry']['coordinates'] for item in sublist]\n",
-    "    flat_list=[item for sublist in flat_list for item in sublist]\n",
-    "    longs=flat_list[0::2]\n",
-    "    lats=flat_list[1::2]\n",
-    "    #display(lats,longs)\n",
-    "    poly_geom = Polygon(zip(longs, lats))\n",
-    "    roi_poly = gpd.GeoDataFrame(index=[0], crs=src_crs, geometry=[poly_geom]) \n",
+    "    if(test_data_name=='Draw Your Own'):    \n",
+    "        flat_list=[item for sublist in new_poly.data['geometry']['coordinates'] for item in sublist]\n",
+    "        flat_list=[item for sublist in flat_list for item in sublist]\n",
+    "        longs=flat_list[0::2]\n",
+    "        lats=flat_list[1::2]\n",
+    "        #display(lats,longs)\n",
+    "        poly_geom = Polygon(zip(longs, lats))\n",
+    "        roi_poly = gpd.GeoDataFrame(index=[0], crs=src_crs, geometry=[poly_geom]) \n",
     "    roi_poly.to_file('../NSW/tmp/roi_poly.shp')\n",
     "    roi_poly=roi_poly.to_crs(dst_crs)\n",
     "\n",
@@ -2221,14 +2223,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if(workflow['model_engine']=='loopstructural'):  \n",
+    "if(workflow['model_engine']=='loopstructural'): \n",
+    "    cmap=''\n",
     "    dtm = rasterio.open(dtm_reproj_file)\n",
     "    if(os.path.exists(fault_file)):\n",
     "        f_clip=faults_clip[faults_clip[c_l['f']].str.contains(c_l['fault'])]\n",
-    "        m2l_export.display_LS_map(model,dtm,geol_clip,f_clip,dst_crs,use_topo=True,use_faults=True)\n",
+    "        m2l_export.display_LS_map(model,dtm,geol_clip,f_clip,dst_crs,False,cmap,use_topo=True,use_faults=True)\n",
     "    else:\n",
     "        f_clip=[]\n",
-    "        m2l_export.display_LS_map(model,dtm,geol_clip,f_clip,dst_crs,use_topo=True,use_faults=False)\n",
+    "        m2l_export.display_LS_map(model,dtm,geol_clip,f_clip,dst_crs,False,cmap,use_topo=True,use_faults=False)\n",
     "\n",
     "    dtm.close()\n"
    ]
