--- a/notebooks/5. VIC leaflet example.ipynb
+++ b/notebooks/5. VIC leaflet example.ipynb
@@ -139,6 +139,30 @@
     "        miny=last_coords.iloc[0]['miny']\n",
     "        maxx=last_coords.iloc[0]['maxx']\n",
     "        maxy=last_coords.iloc[0]['maxy']\n",
+    "        roi_poly=gpd.read_file('../scratch/VIC/roi_poly.shp')\n",
+    "    elif(not test_data_name =='Draw Your Own'):\n",
+    "        y_point_list = [miny, miny, maxy, maxy, maxy]\n",
+    "        x_point_list = [minx, maxx, maxx, minx, minx]\n",
+    "        bbox_geom = Polygon(zip(x_point_list, y_point_list))\n",
+    "        polygon = gpd.GeoDataFrame(index=[0], crs=dst_crs, geometry=[bbox_geom])\n",
+    "        polygon_ll=polygon.to_crs(src_crs)\n",
+    "\n",
+    "        minx=polygon_ll.total_bounds[0]\n",
+    "        maxx=polygon_ll.total_bounds[2]\n",
+    "        miny=polygon_ll.total_bounds[1]\n",
+    "        maxy=polygon_ll.total_bounds[3]\n",
+    "\n",
+    "        minlong=minx\n",
+    "        maxlong=maxx\n",
+    "        minlat=miny\n",
+    "        maxlat=maxy\n",
+    "        #print(\"x\",polygon_ll.total_bounds[0])\n",
+    "        st_bbox=[minlong,minlat,maxlong,maxlat]\n",
+    "        lat_point_list = [minlat, minlat, maxlat, maxlat,maxlat]\n",
+    "        lon_point_list = [minlong, maxlong, maxlong, minlong, minlong]\n",
+    "        bbox_geom = Polygon(zip(lon_point_list, lat_point_list))\n",
+    "        rect = gpd.GeoDataFrame(index=[0], crs=src_crs, geometry=[bbox_geom]) \n",
+    "\n",
     "    src_crs = \"epsg:4326\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
     "    dst_crs = \"epsg:28355\"  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
     "\n",
@@ -2267,13 +2291,14 @@
    "outputs": [],
    "source": [
     "if(workflow['model_engine']=='loopstructural'):  \n",
+    "    cmap=''\n",
     "    dtm = rasterio.open(dtm_reproj_file)\n",
     "    if(os.path.exists(fault_file)):\n",
     "        f_clip=faults_clip[faults_clip[c_l['f']].str.contains(c_l['fault'])]\n",
-    "        m2l_export.display_LS_map(model,dtm,geol_clip,f_clip,dst_crs,use_topo=True,use_faults=True)\n",
+    "        m2l_export.display_LS_map(model,dtm,geol_clip,f_clip,dst_crs,False,cmap,use_topo=True,use_faults=True)\n",
     "    else:\n",
     "        f_clip=[]\n",
-    "        m2l_export.display_LS_map(model,dtm,geol_clip,f_clip,dst_crs,use_topo=True,use_faults=False)\n",
+    "        m2l_export.display_LS_map(model,dtm,geol_clip,f_clip,dst_crs,False,cmap,use_topo=True,use_faults=False)\n",
     "\n",
     "    dtm.close()\n"
    ]
