--- a/notebooks/2. QLD leaflet example.ipynb
+++ b/notebooks/2. QLD leaflet example.ipynb
@@ -641,7 +641,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "structure_file,geology_file,fault_file,mindep_file,fold_file,c_l=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths,drift_prefix,roi_poly,roi_poly)"
+    "structure_file,geology_file,fault_file,mindep_file,fold_file,c_l=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths,drift_prefix,roi_poly)"
    ]
   },
   {
